<resources>
    <string name="app_name">Weight Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question1">¿Cuál es tu peso actual? (lb)</string>
    <string name="question2">¿Cuanto peso quieres perder? (lb)</string>
    <string name="btn_continuar_text">Continuar</string>
    <string name="text_fecha">Fecha</string>
    <string name="text_peso">Peso (lb)</string>
    <string name="button_addProgessText">Guardar</string>
    <string name="text_field_error">Este campo es requerido.</string>
    <string name="password_error">La contraseña debe contener al menos 6 caracteres.</string>
    <string name="invalid_email">Ingrese un correo electrónico valido.</string>
    <string name="txt_name_hint">Nombre</string>
    <string name="txt_apellidos_hint">Apellidos</string>
    <string name="txt_email_hint">Correo electrónico</string>
    <string name="txt_password_hint">Contraseña</string>
    <string name="btn_register_text">Registrarse</string>
    <string name="btn_login_text">Iniciar sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="peso_original">Original</string>
    <string name="peso_objetivo">Objetivo</string>
    <string name="peso_restante">Restante</string>
    <string name="indicador_semanal">Semana</string>
    <string name="indicardor_mensual">Mes</string>
    <string name="indicador_total">Total</string>
    <string name="number_defaultValue">0</string>
</resources>